// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PostPreviewLoader renders as expected with defaultProps 1`] = `
<PostPlaceholder
  headline="Welcome to HKU Fellows"
  headlineColor="green"
  icon={
    Object {
      "name": "md-book",
    }
  }
  subHeadline="Enjoy your peer learning journey with us"
/>
`;

exports[`Testing PostPreviewLoader renders as expected with failed state 1`] = `
<PostPlaceholder
  button={
    Object {
      "onPress": [Function],
      "text": "Refresh",
    }
  }
  headline="Load Failure"
  headlineColor="red"
  icon={
    Object {
      "active": true,
      "name": "flash",
    }
  }
  subHeadline="Oops! We hope a page refresh helps"
/>
`;

exports[`Testing PostPreviewLoader renders as expected with loading 1`] = `
<PostLoadIndicator
  multiple={true}
/>
`;

exports[`Testing PostPreviewLoader renders as expected with no post placeholder 1`] = `
<PostPlaceholder
  button={
    Object {
      "onPress": [Function],
      "text": "Compose",
    }
  }
  headline="No Result / No Posts Yet"
  icon={
    Object {
      "name": "md-paper",
    }
  }
  subHeadline="Feel free to raise the first post"
/>
`;
